fix wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,8 +121,9 @@
 .footer-icon-contact {
     height: 14px;
     width: 14px;
-    margin-right:10px;
+    margin-right: 7px;
     fill: currentColor;
     position:relative;
     top:2px;
+    left:-2px;
 }
